--- a/templates/HomePage/DayInLife/DayInLife.module.sass
+++ b/templates/HomePage/DayInLife/DayInLife.module.sass
@@ -55,6 +55,7 @@
     z-index: 2
     max-width: 640px
     margin: 0 auto 64px
+    padding-top: 24px
     text-align: center
     +m
         margin-bottom: 40px
