--- a/templates/HomePage/Home.module.sass
+++ b/templates/HomePage/Home.module.sass
@@ -2,12 +2,12 @@
 
 .outer
     position: relative
+    overflow-x: hidden
     padding-top: 168px
     +t
         padding-top: 152px
     +m
         padding-top: 108px
-        // overflow: hidden
     &:before
         content: ""
         position: absolute
