--- a/templates/HomePage/WorkflowShowcase/WorkflowShowcase.module.sass
+++ b/templates/HomePage/WorkflowShowcase/WorkflowShowcase.module.sass
@@ -50,8 +50,9 @@
 .head
     position: relative
     z-index: 2
-    max-width: 640px
+    max-width: 720px
     margin: 0 auto 64px
+    padding-top: 24px
     text-align: center
     +m
         margin-bottom: 40px
@@ -61,8 +62,6 @@
     +m
         font-size: 32px
         line-height: 1.2
-        br
-            display: none
 
 .subtitle
     +info
